# src/endpoints/users/users.js
@@ -35,10 +35,6 @@ router.patch(
 // ========== GET requests ==========
 // ==================================
 
-// Get all users
-// TODO IMPORTANT: ADD AUTHORIZATION AND AUTHENTICATION If this endpoint is wanted
-// router.get("/", userController.getAllUsers);
-
 // Truncate test table
 router.get("/truncate", userController.truncateTestTable);
 
